--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     .demo{background:#161b22;border-radius:1rem;padding:2rem;box-shadow:4px 4px 20px rgba(0,0,0,.7),-4px -4px 20px rgba(255,255,255,.05);margin-bottom:3rem}
     .scenarios{display:flex;flex-wrap:wrap;gap:1rem;justify-content:center;margin-bottom:2rem;padding:0 1rem}
     .scenarios button{background:#0d1117;color:#c9d1d9;border:none;padding:.8rem 1.5rem;font-size:.9rem;border-radius:2rem;box-shadow:4px 4px 10px rgba(0,0,0,.7),-4px -4px 10px rgba(255,255,255,.05);cursor:pointer;transition:transform .2s,background .2s}
-    .scenarios button:hover{transform:translateY(-2px);background:#bf1e2e}
+    .scenarios button:hover { transform:translateY(-2px); background:#bf1e2e; }
+    .scenarios button.active { background:#bf1e2e; }
     .group-title{display:none;font-size:1.25rem;font-weight:700;color:#b08900;margin:2rem 0 1rem;padding:0 1rem}
     .phones-grid{display:grid;gap:1rem;grid-template-columns:repeat(auto-fill,minmax(200px,1fr));justify-content:start;padding:0 1rem}
     .phone{display:none;flex-direction:column;background:#0d1117;border-radius:2rem;padding:1rem;box-shadow:4px 4px 20px rgba(0,0,0,.7),-4px -4px 20px rgba(255,255,255,.05);width:100%;max-width:230px;aspect-ratio:9/19}
@@ -82,7 +83,7 @@
         <h1>ComCORE.ai</h1>
         <p class="subtitle">Control the moment, Command the Outcome</p>
         <p>When every second matters, hesitation is fatal. <strong>ComCORE.ai</strong> fuses every voice on campus into one decisive heartbeat—seeing, deciding, and deploying the right response before chaos can take hold.</p>
-        <a href="#signup" class="btn">Sign Up Now</a>
+        <a href="#signup" class="btn">Request Early Access</a>
       </div>
     </section>
 
@@ -127,7 +128,7 @@
       <p>Become a founding supporter—receive exclusive early access, priority updates, and help shape the future of campus safety.</p>
       <form id="signup-form" action="#" method="POST" onsubmit="sendEmail(event)">
         <input type="email" name="email" placeholder="Your email address" required>
-        <button type="submit" class="btn">Sign Up Now</button>
+        <button type="submit" class="btn">Request Early Access</button>
       </form>
     </section>
 
@@ -256,7 +257,17 @@
     function resetDemo(){Object.values(phones).forEach(p=>{p.style.display='none';p.classList.remove('caller');p.querySelector('.messages').innerHTML='';});document.querySelectorAll('.group-title').forEach(t=>t.style.display='none');}
     function addMsgs(id,msgs){const box=document.querySelector(`.messages[data-id='${id}']`);msgs.forEach(([cls,text])=>{const m=document.createElement('div');m.className='msg '+cls;m.innerText=text;box.appendChild(m);});}
     function runScenario(key){if(activeScenario===key){resetDemo();activeScenario=null;return;}activeScenario=key;resetDemo();let caller=false;const actors=scenarios[key]||{};for(const[id,msgArr]of Object.entries(actors)){const p=phones[id];p.style.display='flex';addMsgs(id,msgArr);const grp=registry.find(r=>r.id===id).group;document.getElementById(`${grp}-title`).style.display='block';if(!caller&&msgArr[0][0]==='user'){p.classList.add('caller');caller=true;}}}
-    document.querySelectorAll('.scenarios button').forEach(btn=>btn.addEventListener('click',()=>runScenario(btn.dataset.scenario)));
+    // Scenario button click handlers with active state toggle
+    document.querySelectorAll('.scenarios button').forEach(btn => {
+      btn.addEventListener('click', () => {
+        runScenario(btn.dataset.scenario);
+        // Update active button styling
+        document.querySelectorAll('.scenarios button').forEach(b => b.classList.remove('active'));
+        if (activeScenario === btn.dataset.scenario) {
+          btn.classList.add('active');
+        }
+      });
+    });
 
     /* Signup handler */
     function sendEmail(e){e.preventDefault();const userEmail=document.getElementById('signup-form').email.value;window.location.href=`mailto:duder@dudeworth.com?subject=URGENT:%20New%20Signup%20from%20ComCORE.ai&body=Urgent:%20New%20early%20access%20signup%20received%20from%20${encodeURIComponent(userEmail)}.%0A%0APlease%20add%20them%20to%20the%20founders%20list%20and%20reach%20out%20promptly.%0A%0A%E2%80%93%20ComCORE.ai%20Team`;}
